# OpusControl

./: .env.example  .gitignore  README.md
agent/: CMakeLists.txt
agent/src/: monitor.cpp
client/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
client/src/: App.tsx  index.css  types.ts
client/src/components/: ContextPanel.tsx  FlashAlert.tsx  LiveGraph.tsx
client/src/hooks/: useWebSocket.ts
server/: requirements.txt  server.py
server/scripts/: inject_test_metrics.py
